--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
       "jsx": true
     }
   },
-  "ignorePatterns": ["node_modules/**/*"],
+  "ignorePatterns": ["node_modules/**/*", "src/dex-sdk/**/*"],
   "settings": {
     "react": {
       "version": "detect"
@@ -31,6 +31,8 @@
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "no-restricted-imports": [
       "error",
       {
