--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "devDependencies": {
     "@ethersproject/experimental": "^5.4.0",
+    "@fontsource/dm-sans": "^4.5.0",
     "@gnosis.pm/safe-apps-web3-react": "^0.6.0",
     "@graphql-codegen/cli": "1.21.5",
     "@graphql-codegen/typescript": "1.22.3",
@@ -90,6 +91,7 @@
     "polished": "^3.3.2",
     "prettier": "^2.2.1",
     "qs": "^6.9.4",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.1",
     "react-confetti": "^6.0.0",
     "react-device-detect": "^1.6.2",
@@ -104,6 +106,7 @@
     "react-scripts": "^4.0.3",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^6.0.14",
+    "react-virtualized": "^9.22.3",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
